overflow fix 4

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
 }
 
